<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.antigravitystudios.flppd.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logonobackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:text="@string/welcome_to_flppd_please_choose_one_of_the_options_below"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_create_account"
            android:onClick="@{() -> viewModel.onSignUpClick()}"
            android:text="@string/create_account"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:onClick="@{() -> viewModel.onSignInClick()}"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> viewModel.onFacebookClick()}"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/sign_up_with_facebook"
                android:textAllCaps="true"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>
</layout>