<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.antigravitystudios.flppd.ui.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme" />

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:paddingBottom="28dp"
                    android:paddingLeft="28dp"
                    android:paddingRight="28dp"
                    android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/logonobackground" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/textForgotLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:textSize="15sp"
                        tools:text="Please enter your email addres and password. -- GENERATED --" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="4dp"
                        app:error="@{viewModel.emailError}"
                        app:errorTextAppearance="@style/Error">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress|textAutoComplete"
                            android:maxLines="1"
                            android:text="@={viewModel.email}"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        app:error="@{viewModel.passwordError}"
                        app:errorTextAppearance="@style/Error"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/lastInputField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeActionLabel="Sign in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text="@={viewModel.password}"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/button_green"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onSignInClick()}"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/sign_in"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatCheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-6dp"
                            android:checked="@={viewModel.rememberUser}" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_weight="1"
                            android:text="@string/remember_me"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewModel.onForgotClick()}"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/forgot_password"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_tapping_sign_in_you_agree_with"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:onClick="@{() -> viewModel.onTermsClick()}"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:text="@string/terms_and_conditions"
                            android:textColor="#fff"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>
</layout>