<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.antigravitystudios.flppd.ui.forgotPassword.ForgotPasswordViewModel" />

        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.forgotPassword.ForgotPasswordActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme" />

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:paddingBottom="28dp"
                    android:paddingLeft="28dp"
                    android:paddingRight="28dp"
                    android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/please_verify_your_phone_number"
                        android:textSize="15sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:errorTextAppearance="@style/Error">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/phoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/phonenumber"
                                android:imeActionLabel="@string/send"
                                android:imeOptions="actionUnspecified"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:text="@={viewModel.phonenumber}"
                                android:textSize="16sp"
                                app:keyListener="@{viewModel.phoneKeyListener}" />

                        </android.support.design.widget.TextInputLayout>

                    </FrameLayout>

                    <TextView
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/button_green"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onSendClick()}"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/send"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>

</layout>
